using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationStrings
{
    internal static string canMove = "canMove";
    internal static string Dead = "Dead";
    internal static string Target = "Target";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump= "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string hasTarget = "hasTarget";
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string Attack = "Slashing";
    internal static string Hurt = "Hurt";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string rangedAttack = "rangedAttack";
    internal static string attackRangedCooldown = "attackRangedCooldown";
    internal static string Walk = "Walk";
    internal static string Run = "Run";
}